--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,6 @@ pytest = "^6.2.5"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+fark = 'fark.__main__:main'
